@@ -28,7 +28,7 @@
 		<description lang="en">Artwork Beef automatically adds extra artwork for TV shows and movies into your library. It grabs them from wonderful web services and the file system.</description>
 		<disclaimer lang="en">Artwork sources: fanart.tv, TheTVDB.com, The Movie Database</disclaimer>
 		<news>v0.10.0
-- Automatically find new artwork for old items only once per day, or disable altogether
+- Automatically find new artwork for old items only once per day, plus option to disable old item updates altogether
 - Remove movie thumbnail Kodi automatically creates if your scraper is not configured to add a poster
 - Add manual action to remove all artwork of a specific type
 
